--- a/package.json
+++ b/package.json
@@ -8,8 +8,18 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "animate.css": "^4.1.1",
+    "axios": "^1.4.0",
+    "echarts": "^4.9.0",
+    "element-ui": "^2.15.13",
+    "js-base64": "^3.7.5",
+    "js-cookie": "^3.0.5",
+    "less-loader": "^11.1.3",
+    "sass": "^1.63.6",
+    "sass-loader": "^13.3.2",
     "vue": "^2.6.14",
-    "vue-router": "^3.5.1"
+    "vue-router": "^3.5.1",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-eslint": "~5.0.0",
@@ -20,7 +30,7 @@
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.1.0",
-    "eslint-plugin-vue": "^8.0.3",
+    "eslint-plugin-vue": "^7.0.0",
     "vue-template-compiler": "^2.6.14"
   }
 }
