--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@types/echarts": "^4.9.18",
     "animate.css": "^4.1.1",
     "axios": "^1.4.0",
     "echarts": "^4.9.0",
@@ -19,6 +20,7 @@
     "sass-loader": "^13.3.2",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
+    "vue-upload-component": "^2.8.23",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
